--- a/apps/templates/dashboard.html
+++ b/apps/templates/dashboard.html
@@ -45,7 +45,7 @@
 
                 </svg>
                 
-                <a class="navbar-brand" href="/inventory-list/">Inventory</a>
+                <!-- <a class="navbar-brand" href="/inventory-list/">Inventory</a> -->
 
             </a>
 
@@ -107,7 +107,7 @@
             <a href="#" class="dropdown-toggle">Payroll</a>
             <ul class="dropdown-menu">
                 <li><a href="/api-payroll-temp/">Add Employee</a></li>
-               
+                <li><a href="/api-payroll-computation/">Payroll Computation</a></li>
             </ul>
         </li>
         <a href="/logs/">Logs</a>
