--- a/apps/templates/dashboard.html
+++ b/apps/templates/dashboard.html
@@ -108,8 +108,13 @@
             <ul class="dropdown-menu">
                 <li><a href="/api-payroll-temp/">Add Employee</a></li>
                 <li><a href="/api-payroll-computation/">Payroll Computation</a></li>
+                <li><a href="/api-payroll-comp2/">Payroll Computation 2</a></li>
             </ul>
         </li>
+
+        
+
+
         <a href="/logs/">Logs</a>
     </div>
     <div id="main">
