--- a/apps/templates/payroll/payroll_comp2.html
+++ b/apps/templates/payroll/payroll_comp2.html
@@ -200,14 +200,14 @@
 
             <div class="col-md">
                 <div class="form-floating">
-                  <input type="number" class="form-control" id="under_time" >
-                  <label for="floatingInputGrid"class="label-large" >UNDER TIME</label>
+                  <input type="number" class="form-control" id="normal_working_day_ot_no" >
+                  <label for="floatingInputGrid"class="label-large" >OT Number</label>
                 </div>
               </div>
               
               <div class="col-md">
                 <div class="form-floating">
-                  <input type="number" class="form-control" id="normal_working_day_ot" >
+                  <input type="number" class="form-control" id="normal_working_day_ot_amount" >
                   <label for="floatingInputGrid" class="label-large">NORMAL WORKING DAY OT</label>
     
                 
@@ -220,13 +220,31 @@
 
         <br>
 
+        
+        <div class="row g-2">
+            <div class="col-md">
+                <div class="form-floating">
+                  <input type="number" class="form-control" id="spl_30_no" >
+                  <label for="floatingInputGrid"class="label-large" >Special Holiday No.</label>
+                </div>
+            </div>
 
+            <div class="col-md">
+                <div class="form-floating">
+                  <input type="number" class="form-control" id="spl_30_amount" >
+                  <label for="floatingInputGrid"class="label-large" >Special Holiday Amount</label>
+                </div>
+            </div>
+
+        </div>
+
+        <br>
         <div class="row g-2">
 
             <div class="col-md">
                 <div class="form-floating">
-                  <input type="number" class="form-control" id="spl_30" >
-                  <label for="floatingInputGrid"class="label-large" >Special Holiday 30%</label>
+                  <input type="number" class="form-control" id="legl_holiday_no" >
+                  <label for="floatingInputGrid"class="label-large" >Legal Holiday No.</label>
                 </div>
               </div>
               
@@ -239,12 +257,7 @@
                 </div>
               </div>
 
-              <div class="col-md">
-                <div class="form-floating">
-                  <input type="number" class="form-control" id="holiday_ot" >
-                  <label for="floatingInputGrid"class="label-large" >HOLIDAY OT</label>
-                </div>
-              </div>
+              
            
         
         </div>
@@ -255,11 +268,15 @@
 
         <div class="row g-2">
 
-            
+            <div class="col-md">
+                <div class="form-floating">
+                  <input type="number" class="form-control" id="holiday_ot" >
+                  <label for="floatingInputGrid"class="label-large" >HOLIDAY OT</label>
+                </div>
+              </div>
               
               
-           
-        
+    
         </div>
 
     
