--- a/apps/templates/payroll/payroll_comp2.html
+++ b/apps/templates/payroll/payroll_comp2.html
@@ -250,7 +250,7 @@
               
               <div class="col-md">
                 <div class="form-floating">
-                  <input type="number" class="form-control" id="legal_holiday" >
+                  <input type="number" class="form-control" id="legal_holiday_amount" >
                   <label for="floatingInputGrid" class="label-large">Legal Holiday </label>
     
                 
@@ -265,15 +265,37 @@
     
         <br>
 
+        
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="spl_ot_checkbox" checked>
+          <label class="form-check-label" for="flexCheckChecked">
+            Special Holiday OT
+          </label>
+        </div>
 
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="lgl2_checkbox" checked>
+          <label class="form-check-label" for="flexCheckChecked">
+            legal Holiday OT
+          </label>
+        </div>
+
+        <br>
         <div class="row g-2">
 
             <div class="col-md">
                 <div class="form-floating">
-                  <input type="number" class="form-control" id="holiday_ot" >
-                  <label for="floatingInputGrid"class="label-large" >HOLIDAY OT</label>
+                  <input type="number" class="form-control" id="holiday_ot_number" >
+                  <label for="floatingInputGrid"class="label-large" >HOLIDAY OT Number</label>
                 </div>
+            </div>
+
+            <div class="col-md">
+              <div class="form-floating">
+                <input type="number" class="form-control" id="holiday_ot_amount" >
+                <label for="floatingInputGrid"class="label-large" >HOLIDAY OT</label>
               </div>
+          </div>
               
               
     
