--- a/apps/templates/dashboard.html
+++ b/apps/templates/dashboard.html
@@ -86,6 +86,15 @@
 
 
         <li class="dropdown">
+            <a href="#" class="dropdown-toggle">Purchase Order</a>
+            <ul class="dropdown-menu">
+              <li><a href="/api-purchase-order-temp/">Purchase Order</a></li>
+             
+            </ul>
+        </li>
+
+
+        <li class="dropdown">
             <a href="#" class="dropdown-toggle">Job Order</a>
             <ul class="dropdown-menu">
               <li><a href="/ticketing/">Job Ticketing</a></li>
