--- a/apps/templates/purchase_order/po.html
+++ b/apps/templates/purchase_order/po.html
@@ -2,6 +2,15 @@
 
 {% block content %}
 
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.6.0/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.16/jspdf.plugin.autotable.min.js"></script> -->
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.68/pdfmake.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.68/vfs_fonts.js"></script>
+
+
 <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
 <!-- <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
 <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script> -->
@@ -17,40 +26,13 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
+
+
+
 <style>
 
 /* Purchase Order */
-.container1 label {
-    flex-basis: 100px;
-    text-align: right;
-    margin-right: 10px;
-    }
 
-    
-.container1 {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-    }
-
-
-.container1 input {
-    flex-grow: 1;
-    width: 30%;
-    height: 50px;
-    }
-
-.container1 select {
-    flex-grow: 1;
-    width: 30%;
-    height: 50px;
-    }
-
-.container1 textarea {
-    flex-grow: 1;
-    width: 30%;
-    height: 85px;
-    }
 
 
 </style>
@@ -58,9 +40,50 @@
 
 <div id="container" class="container mt-4">
 
+<!-- =================================this modal is for printing Purchase Order ============================= -->
+<div class="modal" id="print_po_modal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Print PO Modal</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+
+           
+            <div class="container1">
+                <label for="PO_Number" >PO Number :</label>
+                <input
+                    type="text"
+                    name="print_po_number"
+                    id="print_po_number"
+                    class="form-control"
+                >
+                </input>
+            </div>
+
+
+
+          
+          <br>
+
+          
+
+          
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="btn_print_purchase_order">Print</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
 
         
-<!-- =================================this is for modal update cash advance============================= -->
+<!-- =================================this is for modal ============================= -->
               <div class="modal" id="insert_invt_items_modal" tabindex="-1">
                 <div class="modal-dialog modal-lg">
                   <div class="modal-content">
@@ -175,6 +198,11 @@
                     data-bs-toggle="modal" data-bs-target="#insert_invt_items_modal" >
                     Add PURCHASE ORDER
                 </button>
+
+                <button type="button" class="btn btn-danger btn-right"  id="print_purchase_order_btn"
+                    data-bs-toggle="modal" data-bs-target="#print_po_modal" >
+                    Print PO
+                </button>
                 
                 <!-- <button type="button" class="btn btn-primary btn-right"  id="btn_update_hdmf_loan"
                       data-bs-toggle="modal" >
@@ -198,6 +226,7 @@
                                     <td>User</td>
                                     
                                     <td>Action</td>
+                                   
                                     
                                 </tr>
                             </thead>
@@ -254,6 +283,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.datatables.net/v/dt/dt-2.0.7/b-3.0.2/b-html5-3.0.2/date-1.5.2/datatables.min.js"></script>
     <script src="https://cdn.datatables.net/buttons/3.0.2/js/dataTables.buttons.min.js"></script>
+
+    
 
 
     <script>
