--- a/apps/templates/inventory/inventory_list.html
+++ b/apps/templates/inventory/inventory_list.html
@@ -221,10 +221,10 @@
                     Add Inventory Item 
                 </button>
                 
-                <!-- <button type="button" class="btn btn-primary btn-right"  id="btn_update_hdmf_loan"
-                      data-bs-toggle="modal" >
-                    Update HDMF 
-                </button> -->
+                <button type="button" class="btn btn-primary btn-right"  id="insert_btn"
+                       >
+                    Insert Inventory
+                </button>
         
                 </div>
                 <div class="card-body">
