--- a/apps/templates/inventory/inventory_list.html
+++ b/apps/templates/inventory/inventory_list.html
@@ -100,101 +100,7 @@
     
                       <br>
 
-                      <div class="row g-2">
-    
-
-                        <div class="col-md">
-                          <div class="form-floating">
-                            <input type="number" class="form-control" id="inventory_quantity"  >
-                            <label for="floatingInputGrid" class="label-large">Quantity</label>
-            
-                          
-                          </div>
-                       
-                        </div>
-                        
-                        <div class="col-md">
-                          <div class="form-floating">
-                            <input type="text" class="form-control" id="inventory_brand"  >
-                            <label for="floatingInputGrid" class="label-large">Brand</label>
-            
-                          
-                          </div>
-                        </div>
-
-                        <div class="col-md">
-                          <div class="form-floating">
-                            <input type="number" class="form-control" id="inventory_amount"  >
-                            <label for="floatingInputGrid" class="label-large">Amount</label>
-            
-                          
-                          </div>
-                        </div>
-                        
-                        
-                      </div>
-
-                      <br>
-                      <div class="row g-2">
-
-
-                        <div class="col-md">
-                          <div class="form-floating">
-                            <input type="text" class="form-control" id="inventory_serial_no"  >
-                            <label for="floatingInputGrid" class="label-large">Serial No.</label>
-            
-                          
-                          </div>
-                        </div>
-    
-                  
-                        <div class="col-md">
-                          <div class="form-floating">
-                            <input type="text" class="form-control" id="inventory_user"  >
-                            <label for="floatingInputGrid" class="label-large">User</label>
-            
-                          
-                          </div>
-                        </div>
-
-
-                        <div class="col-md">
-                          <div class="form-floating">
-                            <input type="text" class="form-control" id="inventory_department"  >
-                            <label for="floatingInputGrid" class="label-large">Department</label>
-            
-                          
-                          </div>
-                        </div>
-
-                        
-                      </div>
-
-                      <br>
-                      <div class="row g-2">
-    
-                  
-                        <div class="col-md">
-                          <div class="form-floating">
-                            <input type="date" class="form-control" id="inventory_date_issue"  >
-                            <label for="floatingInputGrid" class="label-large">Date Issue</label>
-            
-                          
-                          </div>
-                        </div>
-
-                      <div class="col-md">
-                          <div class="form-floating">
-                            <input type="text" class="form-control" id="inventory_description"  >
-                            <label for="floatingInputGrid" class="label-large">Description</label>
-            
-                          
-                          </div>
-                        </div>
-
-                        
-                      </div>
-                 
+                                      
 
                  <div class="container mt-3">
                     <table class="table table-borderless">
@@ -206,7 +112,7 @@
                                 <td>Serial No.</td>
                                 <td>User</td>
                                 <td>Department</td>
-                                
+                                <td>Action</td> 
                                 
                             
                                 <!-- <td>
