--- a/apps/templates/inventory/inventory_list.html
+++ b/apps/templates/inventory/inventory_list.html
@@ -14,13 +14,33 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<style>
+	 table{
+      width: 100%;
+            border-collapse: collapse;
+        }
+        td {
+            padding: 10px;
+        }
+        input[type="text"] {
+            width: 100%; /* Full width within the table cell */
+            padding: 5px;
+            box-sizing: border-box;
+       
+         }
+
+</style>
+
+
+
+
+		
+
 
 <div id="container" class="container mt-4">
 
+    <h1>INVENTORY TRANSACTION</h1>
 
- 
-
- 
 
         
 <!-- =================================this is for modal update cash advance============================= -->
@@ -112,7 +132,10 @@
                                 <td>Serial No.</td>
                                 <td>User</td>
                                 <td>Department</td>
-                                <td>Action</td> 
+                                <td>Date Issue</td>
+                                <td>Discription</td>
+
+                               <td>Action</td> 
                                 
                             
                                 <!-- <td>
@@ -232,11 +255,11 @@
                 </div>
             </div>
       
-        </div>
+     
       
          
     
-                 
+</div>                 
                 
         
     
