--- a/apps/templates/inventory/inventory_list.html
+++ b/apps/templates/inventory/inventory_list.html
@@ -25,8 +25,17 @@
         input[type="text"] {
             width: 100%; /* Full width within the table cell */
             padding: 5px;
+            height:auto;
             box-sizing: border-box;
        
+         }
+         input[type="date"]{
+
+          width: 100%; /* Full width within the table cell */
+            padding: 5px;
+            height:auto;
+            box-sizing: border-box;
+
          }
 
 </style>
@@ -216,6 +225,7 @@
                                     <td>Date Release</td>
                                     <td>User</td>
                                     <td>Department</td>
+                                    <td>Amount</td>
                                     <td>Action</td>
                                     
                                 </tr>
@@ -235,7 +245,7 @@
                                         <td></td>
                                         <td></td>
                                         <td></td>
-                                        
+                                        <td></td>
                                     </tr>
                                 
                                 
