--- a/apps/templates/inventory/update_inventory.html
+++ b/apps/templates/inventory/update_inventory.html
@@ -11,7 +11,8 @@
         <div class="col-md">
             <div class="form-floating">
                 <select class="form-select" id="inventory_company" aria-label="Floating label select example">
-                    <option value="{{ inventory_data.inventory_company }}" selected>{{ inventory_data.inventory_company }}</option>
+                    <option value="{{ inventory_data.inventory_company }}" 
+                          selected>{{ inventory_data.inventory_company }}</option>
                     <option value="AFMI">AFMI</option>
                     <option value="DBMC">DBMC</option>
                     <option value="DCLSI">DCLSI</option>
