--- a/apps/templates/dashboard.html
+++ b/apps/templates/dashboard.html
@@ -108,7 +108,7 @@
         <li class="dropdown">
             <a href="#" class="dropdown-toggle">Repair on Service</a>
             <ul class="dropdown-menu">
-              <li><a href="/ticketing/">Printer Repair</a></li>
+              <li><a href="/api-repair/">Printer Repair</a></li>
              
             </ul>
         </li>
