--- a/apps/templates/repair/printer_repair.html
+++ b/apps/templates/repair/printer_repair.html
@@ -142,7 +142,7 @@
                   
                         <div class="col-md">
                           <div class="form-floating">
-                            <input type="text" class="form-control" id="brand"  >
+                            <input type="text" class="form-control" id="serial_number"  >
                             <label for="floatingInputGrid" class="label-large">Serial Number</label>
             
                           
@@ -160,7 +160,7 @@
 
                         <div class="col-md">
                           <div class="form-floating">
-                            <input type="text" class="form-control" id="model">
+                            <input type="text" class="form-control" id="remarks">
                             <label for="floatingInputGrid" class="label-large">Remarks</label>
             
                           
@@ -170,7 +170,7 @@
                   
                         <div class="col-md">
                           <div class="form-floating">
-                            <input type="text" class="form-control" id="brand"  >
+                            <input type="text" class="form-control" id="repair_user"  >
                             <label for="floatingInputGrid" class="label-large">User</label>
             
                           
@@ -186,7 +186,20 @@
 
                      <div class="row g-3">
 
-                        <div class="col-md">
+                       <div class="col-md">
+                          <div class="form-floating">
+                            <input type="text" class="form-control" id="amount">
+                            <label for="floatingInputGrid" class="label-large">Amount</label>
+            
+                          
+                          </div>
+                        </div>
+    
+  
+
+
+
+                      <div class="col-md">
                           <div class="form-floating">
                             <input type="text" class="form-control" id="department">
                             <label for="floatingInputGrid" class="label-large">Department</label>
