--- a/apps/templates/repair/printer_repair.html
+++ b/apps/templates/repair/printer_repair.html
@@ -188,7 +188,7 @@
 
                        <div class="col-md">
                           <div class="form-floating">
-                            <input type="text" class="form-control" id="amount">
+                            <input type="number" class="form-control" id="amount">
                             <label for="floatingInputGrid" class="label-large">Amount</label>
             
                           
@@ -226,7 +226,7 @@
                     <div class="modal-footer">
 									 
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                      <button type="button" class="btn btn-primary" id="btn_save_inventory">Save changes</button>
+                      <button type="button" class="btn btn-primary" id="btn_save_repair">Save changes</button>
                     </div>
                   </div>
                 </div>
@@ -268,8 +268,8 @@
                                     <td>Serial No.</td>
                                     <td>Remarks</td>
                                     <td>User</td>
-                                    <td>Department</td>
                                     <td>Amount</td>
+                                    <td>Department</td>
                                     <td>Action</td>
                                     
                                 </tr>
@@ -322,7 +322,7 @@
     
     
     
-    <script src="/static/inventory/inventory2.js"></script>
+    <script src="/static/repair/repair.js"></script>
     
     
     
