--- a/apps/templates/dashboard.html
+++ b/apps/templates/dashboard.html
@@ -112,6 +112,15 @@
              
             </ul>
         </li>
+
+
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle">Check Printing</a>
+            <ul class="dropdown-menu">
+              <li><a href="/check-printing/">BDO</a></li>
+             
+            </ul>
+        </li>
         
         
         <li class="dropdown">
