--- a/apps/templates/dashboard.html
+++ b/apps/templates/dashboard.html
@@ -117,7 +117,7 @@
         <li class="dropdown">
             <a href="#" class="dropdown-toggle">Check Printing</a>
             <ul class="dropdown-menu">
-              <li><a href="/check-printing/">BDO</a></li>
+              <li><a href="/check-printing/">BDO/MBTC/CHB</a></li>
              
             </ul>
         </li>
