--- a/apps/templates/dashboard.html
+++ b/apps/templates/dashboard.html
@@ -77,7 +77,7 @@
             <a href="#" class="dropdown-toggle">Inventory</a>
             <ul class="dropdown-menu">
               <li><a href="/inventory-list/">Inventory List</a></li>
-              
+              <li><a href="/api-accountability/">Accountability</a></li>
              
 
             </ul>
