add printer rental module

--- a/apps/templates/dashboard.html
+++ b/apps/templates/dashboard.html
@@ -111,6 +111,16 @@
         </li>
 
 
+      <li class="dropdown">
+            <a href="#" class="dropdown-toggle">Rental Printer</a>
+             <ul class="dropdown-menu">
+              <li><a href="/rental-printer/">Rental</a></li>
+             
+            </ul>
+      </li>
+
+
+
         <li class="dropdown">
             <a href="#" class="dropdown-toggle">Check Printing</a>
             <ul class="dropdown-menu">
