add supplier for front end

--- a/apps/templates/dashboard.html
+++ b/apps/templates/dashboard.html
@@ -83,6 +83,18 @@
             </ul>
         </li>
 
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle">Inventory Supply</a>
+            <ul class="dropdown-menu">
+              <li><a href="/supplier/">Supplier</a></li>
+              <li><a href="/api-accountability/">Accountability</a></li>
+             
+
+            </ul>
+        </li>
+
+
+
 
         <li class="dropdown">
             <a href="#" class="dropdown-toggle">Purchase Order</a>
