--- a/apps/templates/inventory_supply/invt_supplier.html
+++ b/apps/templates/inventory_supply/invt_supplier.html
@@ -5,24 +5,98 @@
 <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
 
+
+
+<!-- jQuery UI CSS (for styling the autocomplete dropdown) -->
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+
+<!-- jQuery UI JavaScript -->
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+
+<link href="https://cdn.datatables.net/v/dt/jszip-3.10.1/dt-2.1.4/b-3.1.1/b-html5-3.1.1/datatables.min.css" rel="stylesheet">
+ 
+<script src="https://cdn.datatables.net/v/dt/jszip-3.10.1/dt-2.1.4/b-3.1.1/b-html5-3.1.1/datatables.min.js"></script>
+
+
+
 <link rel="stylesheet" type="text/css" href="/static/style.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
+<div>
+  
+
+  <div id="supplierModal" role="dialog" aria-modal="true" aria-labelledby="dialog-title" class="relative z-10 hidden">
+    <!--
+      Background backdrop, show/hide based on dialog state.
+
+      Entering: "ease-out duration-300"
+        From: "opacity-0"
+        To: "opacity-100"
+      Leaving: "ease-in duration-200"
+        From: "opacity-100"
+        To: "opacity-0"
+    -->
+    <div aria-hidden="true" class="fixed inset-0 bg-gray-500/75 transition-opacity"></div>
+
+    <div class="fixed inset-0 z-10 w-screen overflow-y-auto">
+      <div class="flex min-h-full  items-end justify-center p-4 text-center sm:items-center sm:p-0">
+        <!--
+          Dialog panel, show/hide based on dialog state.
+
+          Entering: "ease-out duration-300"
+            From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+            To: "opacity-100 translate-y-0 sm:scale-100"
+          Leaving: "ease-in duration-200"
+            From: "opacity-100 translate-y-0 sm:scale-100"
+            To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+        -->
+        <div class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 w-[40%]">
+          <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+            <div class="sm:flex sm:items-start">
+              <div class="mx-auto flex size-12 shrink-0 items-center justify-center rounded-full bg-red-100 sm:mx-0 sm:size-10">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="size-6 text-red-600">
+                  <path d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126ZM12 15.75h.007v.008H12v-.008Z" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+              </div>
+              <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                <h3 id="dialog-title" class="text-base font-semibold text-gray-900">Deactivate account</h3>
+                <div class="mt-2">
+                  <p class="text-sm text-gray-500">Are you sure you want to deactivate your account? All of your data will be permanently removed. This action cannot be undone.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
+            <!-- <button type="button" class="inline-flex w-full justify-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-red-500 sm:ml-3 sm:w-auto">Deactivate</button> -->
+            <!-- <button type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs ring-1 ring-gray-300 ring-inset hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button> -->
+          <!-- <button type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs ring-1 ring-gray-300 ring-inset hover:bg-gray-50 sm:mt-0 sm:w-auto close-modal">Cancel</button> -->
+
+            <button type="button" class="inline-flex bg-red-600 text-white w-40 justify-center ...">Deactivate</button>
+            <button type="button" class="inline-flex bg-gray-500 text-white w-40 justify-center ... close-modal">Cancel</button>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 
 <div class="flex justify-center min-h-screen bg-gray-100">
     <div class="w-[85%] rounded-2xl overflow-hidden shadow-lg bg-white p-4">
         <!-- <img class=" h-48 object-cover" src="https://via.placeholder.com/400x200" alt="Card image"> -->
         <div class="pt-4">
-            <button class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-xl">
+            <button id="addSupplierBtn" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded-xl">
               Add Supplier
             </button>
 
         </div>
 
         <div class="py-4">
-          <h2 class="text-sm font-semibold text-gray-800">Card Title</h2>
+          <h2 class="text-sm font-semibold text-gray-800">Supplier List</h2>
 
           <table id="supplier_table"
             class="tabele-auto w-full border-collapse border-gray-500"
@@ -31,17 +105,18 @@
 
           <thead class="bg-gray-500 text-white py-1 px-1 text-center border-x border-green-300 text-sm">
             <tr>
-              <td>Date</td>
-              <td>Date</td>
-              <td>Date</td>
-              <td>Date</td>
-              <td>Date</td>
-              <td>Date</td>
-              <td>Date</td>
+              <td>Name</td>
+              <td>Contact Person</td>
+              <td>Email</td>
+              <td>Phone</td>
+              <td>Address</td>
+              <td>User</td>
+              
               
           </tr>
 
           </thead>
+          <tbody></tbody>
 
 
           </table>
@@ -49,6 +124,9 @@
         </div>  
               
    </div>
+
+
+ <script src="/static/inventory_supply/supplier.js"></script>
         
 </div>       
     
