--- a/apps/templates/inventory_supply/invt_supplier.html
+++ b/apps/templates/inventory_supply/invt_supplier.html
@@ -25,8 +25,78 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
 <div>
-  
+<!-- this is for modal for Updating Supplier -->
+  <div id="supplierModalUpdating" role="dialog" aria-modal="true" aria-labelledby="dialog-title" class="relative z-10 hidden">
+     <div aria-hidden="true" class="fixed inset-0 bg-gray-500/75 transition-opacity"></div>
 
+    <div class="fixed inset-0 z-10 w-screen overflow-y-auto">
+      <div class="flex min-h-full  items-end justify-center p-4 text-center sm:items-center sm:p-0">
+            <div class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 w-[40%]">
+          <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+            <div class="sm:flex sm:items-start">
+              <div class="mx-auto flex size-12 shrink-0 items-center justify-center rounded-full bg-red-100 sm:mx-0 sm:size-10">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="size-6 text-red-600">
+                  <path d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126ZM12 15.75h.007v.008H12v-.008Z" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+              </div>
+                  <div class=" space-x-4">
+                        <div class="flex items-center space-x-2">
+                          <label for="nameUpdate" class="w-30 text-right text-gray-700 font-medium">Name:</label>
+                          <input type="text" id="name" class="border border-gray-300 rounded px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        </div>
+                        <br>
+                        <div class="flex items-center space-x-2">
+                          <label for="contact_person" class="w-30 text-right text-gray-700 font-medium">Contact Person:</label>
+                          <input type="text" id="contact_person" class="border border-gray-300 rounded px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        </div>
+                        <br>
+                        <div class="flex items-center space-x-2">
+                          <label for="email" class="w-30 text-right text-gray-700 font-medium">Email:</label>
+                          <input type="text" id="email" class="border border-gray-300 rounded px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        </div>
+                        <br>
+                        <div class="flex items-center space-x-2">
+                          <label for="phone" class="w-30 text-right text-gray-700 font-medium">Phone:</label>
+                          <input type="text" id="phone" class="border border-gray-300 rounded px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        </div>
+                        <br>
+                        <div class="flex items-center space-x-2">
+                          <label for="ad " class="w-30 text-right text-gray-700 font-medium">Address:</label>
+													
+													<textarea id="address" rows="3" class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
+
+
+											  </div>
+
+											
+
+							</div>
+						
+
+
+
+             </div>
+          </div>
+          <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
+            <!-- <button type="button" class="inline-flex w-full justify-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-xs hover:bg-red-500 sm:ml-3 sm:w-auto">Deactivate</button> -->
+            <!-- <button type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs ring-1 ring-gray-300 ring-inset hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button> -->
+          <!-- <button type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs ring-1 ring-gray-300 ring-inset hover:bg-gray-50 sm:mt-0 sm:w-auto close-modal">Cancel</button> -->
+
+            <button id="updateBtnBtn" type="button" class="inline-flex bg-blue-600 text-white w-40 justify-center ...">Insert Supplier</button>
+            <button type="button" class="rounded-xl inline-flex bg-gray-500 text-white w-40 justify-center ... close-modal">Cancel</button>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<!-- this is for modal for inserting Supplier -->
   <div id="supplierModal" role="dialog" aria-modal="true" aria-labelledby="dialog-title" class="relative z-10 hidden">
      <div aria-hidden="true" class="fixed inset-0 bg-gray-500/75 transition-opacity"></div>
 
@@ -94,7 +164,6 @@
 </div>
 
 
-
 <div class="flex justify-center min-h-screen bg-gray-100">
     <div class="w-[85%] rounded-2xl overflow-hidden shadow-lg bg-white p-4">
         <!-- <img class=" h-48 object-cover" src="https://via.placeholder.com/400x200" alt="Card image"> -->
@@ -103,7 +172,15 @@
               Add Supplier
             </button>
 
+             <button id="updateSupplierBtn" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-6 rounded">
+              Update Supplier
+            </button>
+
+
         </div>
+
+        
+
 
         <div class="py-4">
           <h2 class="text-sm font-semibold text-gray-800">Supplier List</h2>
