--- a/apps/templates/inventory_supply/invt_supplier.html
+++ b/apps/templates/inventory_supply/invt_supplier.html
@@ -41,8 +41,8 @@
               </div>
                   <div class=" space-x-4">
                          <div class="flex items-center space-x-2">
-                          <label for="nameUpdate" class="w-30 text-right text-gray-700 font-medium">Name:</label>
-                          <input type="text" id="idUpdate" class="border border-gray-300 rounded px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                          <label hidden for="nameUpdate" class="w-30 text-right text-gray-700 font-medium">Name:</label>
+                          <input hidden type="text" id="idUpdate" class="border border-gray-300 rounded px-3 py-1 focus:outline-none focus:ring-2 focus:ring-blue-500">
                         </div>
                         <br>
 
@@ -89,7 +89,7 @@
             <!-- <button type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs ring-1 ring-gray-300 ring-inset hover:bg-gray-50 sm:mt-0 sm:w-auto">Cancel</button> -->
           <!-- <button type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs ring-1 ring-gray-300 ring-inset hover:bg-gray-50 sm:mt-0 sm:w-auto close-modal">Cancel</button> -->
 
-            <button id="updateBtnBtn" type="button" class="inline-flex bg-blue-600 text-white w-40 justify-center ...">Insert Supplier</button>
+            <button id="updateBtn" type="button" class="inline-flex bg-blue-600 text-white w-40 justify-center ...">Update Supplier</button>
             <button id ="updateCancelBtn" type="button" class="rounded-xl inline-flex bg-gray-500 text-white w-40 justify-center ... close-modal">Cancel</button>
 
           </div>
