add insert inventory function

--- a/apps/templates/dashboard.html
+++ b/apps/templates/dashboard.html
@@ -87,7 +87,7 @@
             <a href="#" class="dropdown-toggle">Inventory Supply</a>
             <ul class="dropdown-menu">
               <li><a href="/supplier/">Supplier</a></li>
-              <li><a href="/api-accountability/">Accountability</a></li>
+              <li><a href="/inventory-supply/">Inventory</a></li>
              
 
             </ul>
