Add displaying to table Inventory Items

--- a/apps/templates/inventory_supply/inventory_supply.html
+++ b/apps/templates/inventory_supply/inventory_supply.html
@@ -224,16 +224,16 @@
 
           <thead class="bg-gray-500 text-white py-1 px-1 text-center border-x border-green-300 text-sm">
             <tr>
-              <td>Item Code</td>
-              <td>Name</td>
-              <td>Category</td>
-              <td>Description</td>
-              <td>Quantity</td>
-              <td>Unit</td>
-              <td>Reorder Level</td>
-              <td>Price</td>
-              <td>Supplier</td>
-          </tr>
+               <th>Item Code</th>
+              <th>Name</th>
+              <th>Category</th>
+              <th>Description</th>
+              <th>Quantity</th>
+              <th>Unit</th>
+              <th>Reorder Level</th>
+              <th>Price</th>
+              <th>Supplier</th>
+         </tr>
 
           </thead>
           <tbody></tbody>
